--- a/templates/index.html
+++ b/templates/index.html
@@ -1,76 +1,34 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Flask + Celery Examples</title>
-    <style>
-        .progress {
-            width: 100%;
-            text-align: center;
-        }
-    </style>
-  </head>
-  <body>
-    <h1>Flask + Celery Examples</h1>
-    <h2>Example: Long running task with progress updates</h2>
-    <!--<button onclick="start_long_task();">Start Long Calculation</button><br><br>-->
-    <button id="start-bg-job">Start Long Calculation</button><br><br>
-    <div id="progress"></div>
+<head>
+    <title>HTML Table Update</title>
+</head>
+<body>
+    <h1>HTML Table Update</h1>
+    <table id="myTable">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Rows will be dynamically added here -->
+        </tbody>
+    </table>
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/nanobar/0.2.1/nanobar.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
-        function start_long_task() {
-            // add task status elements
-            div = $('<div class="progress"><div></div><div>0%</div><div>...</div><div>&nbsp;</div></div><hr>');
-            $('#progress').append(div);
-
-            // create a progress bar
-            var nanobar = new Nanobar({
-                bg: '#44f',
-                target: div[0].childNodes[0]
-            });
-
-            // send ajax POST request to start background job
-            $.ajax({
-                type: 'POST',
-                url: '/longtask',
-                success: function(data, status, request) {
-                    status_url = request.getResponseHeader('Location');
-                    update_progress(status_url, nanobar, div[0]);
-                },
-                error: function() {
-                    alert('Unexpected error');
-                }
-            });
-        }
-        function update_progress(status_url, nanobar, status_div) {
-            // send GET request to status URL
-            $.getJSON(status_url, function(data) {
-                // update UI
-                percent = parseInt(data['current'] * 100 / data['total']);
-                nanobar.go(percent);
-                $(status_div.childNodes[1]).text(percent + '%');
-                $(status_div.childNodes[2]).text(data['status']);
-                if (data['state'] != 'PENDING' && data['state'] != 'PROGRESS') {
-                    if ('result' in data) {
-                        // show result
-                        $(status_div.childNodes[3]).text('Result: ' + data['result']);
-                    }
-                    else {
-                        // something unexpected happened
-                        $(status_div.childNodes[3]).text('Result: ' + data['state']);
-                    }
-                }
-                else {
-                    // rerun in 2 seconds
-                    setTimeout(function() {
-                        update_progress(status_url, nanobar, status_div);
-                    }, 2000);
-                }
-            });
-        }
-        $(function() {
-            $('#start-bg-job').click(start_long_task);
-        });
+        var source = new EventSource("/update_table");
+        source.onmessage = function(event) {
+            if (event.data === "finished") {
+                source.close()
+                return
+            }
+            console.log("EVENTO:", event.data)
+            let person = JSON.parse(event.data)
+            let row = `<tr><td>${person.name}</td><td>${person.age}</td></tr>`
+            document.getElementById("myTable").getElementsByTagName("tbody")[0].innerHTML += row
+        };
     </script>
-  </body>
+</body>
 </html>
